140 add get usersme api (#142)
* #140 - add GET /users/me API
