# lambda-api/src/main/java/com/formkiq/stacks/api/handler/UsersMeRequestHandler.java
@@ -1,0 +1,73 @@
+/**
+ * MIT License
+ * 
+ * Copyright (c) 2018 - 2020 FormKiQ
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ * 
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
+package com.formkiq.stacks.api.handler;
+
+import static com.formkiq.aws.dynamodb.SiteIdKeyGenerator.DEFAULT_SITE_ID;
+import static com.formkiq.aws.services.lambda.ApiGatewayRequestEventUtil.getCallingCognitoUsername;
+import static com.formkiq.aws.services.lambda.ApiResponseStatus.SC_OK;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import com.amazonaws.services.lambda.runtime.LambdaLogger;
+import com.formkiq.aws.services.lambda.ApiAuthorizer;
+import com.formkiq.aws.services.lambda.ApiGatewayRequestEvent;
+import com.formkiq.aws.services.lambda.ApiGatewayRequestEventUtil;
+import com.formkiq.aws.services.lambda.ApiGatewayRequestHandler;
+import com.formkiq.aws.services.lambda.ApiMapResponse;
+import com.formkiq.aws.services.lambda.ApiRequestHandlerResponse;
+import com.formkiq.module.lambdaservices.AwsServiceCache;
+
+/** {@link ApiGatewayRequestHandler} for "/users/me". */
+public class UsersMeRequestHandler implements ApiGatewayRequestHandler, ApiGatewayRequestEventUtil {
+
+  /**
+   * constructor.
+   *
+   */
+  public UsersMeRequestHandler() {}
+
+  @Override
+  public ApiRequestHandlerResponse get(final LambdaLogger logger,
+      final ApiGatewayRequestEvent event, final ApiAuthorizer authorizer,
+      final AwsServiceCache awsservice) throws Exception {
+
+    String siteId = authorizer.getSiteId() != null ? authorizer.getSiteId() : DEFAULT_SITE_ID;
+    String userId = getCallingCognitoUsername(event);
+    List<String> permissions = new ArrayList<>(authorizer.getSiteIds());
+    permissions.remove(siteId);
+
+    Map<String, Object> map = new HashMap<>();
+    map.put("siteId", siteId);
+    map.put("username", userId);
+    map.put("groups", permissions);
+
+    return new ApiRequestHandlerResponse(SC_OK, new ApiMapResponse(map));
+  }
+
+  @Override
+  public String getRequestUrl() {
+    return "/users/me";
+  }
+}
