# lambda-api/src/main/resources/cloudformation/api.yaml
@@ -30,6 +30,39 @@ Resources:
             Formkiq API: Document Management Platform API using JWT Authentication
           version: #@ data.values.version or assert.fail("missing version")
         paths:
+          /users/me:
+            get:
+              operationId: GetUsersMe
+              description: Return the calling users user information
+              tags:
+              - Users Management
+              responses:
+                '200':
+                  description: "200 OK"
+                  headers:
+                    Access-Control-Allow-Origin:
+                      schema:
+                        type: "string"
+                    Access-Control-Allow-Methods:
+                      schema:
+                        type: "string"
+                    Access-Control-Allow-Headers:
+                      schema:
+                        type: "string"
+                  content:
+                    application/json:
+                      schema:
+                        "$ref": "#/components/schemas/GetUsersMeRequest"
+                '400':
+                  description: 400 OK
+                  content:
+                    application/json:
+                      schema:
+                        $ref: '#/components/schemas/ValidationErrorsResponse'
+              security:
+              - ApiAuthorization: []
+              x-amazon-apigateway-integration:
+                $ref: "#/components/x-amazon-apigateway-integrations/lambdaApi200"
           /version:
             get:
               operationId: GetVersion
@@ -3428,6 +3461,20 @@ Resources:
                 content:
                   type: "string"
                   description: "Document content"
+            GetUsersMeRequest:
+              type: object
+              properties:
+                username:
+                  type: "string"
+                  description: "Username of request caller"
+                siteId:
+                  type: "string"
+                  description: "Site Identifier"
+                permissions:
+                  type: array
+                  description: "List of caller permissions"
+                  items:
+                    type: "string"
             GetVersionRequest:
               type: object
               properties:
